--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "API Base",
   "main": "index.js",
+  "engines": {
+    "node": "12.*"
+  },
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js"
@@ -13,7 +16,9 @@
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.15"
   },
   "devDependencies": {
